🔩 杂项: 添加项目脚本,引入eslint和prettier规范,锁定使用yarn作为包管理器

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,30 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "importHelpers": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "allowUmdGlobalAccess": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
+    "strictBindCallApply": true,
+    "preserveConstEnums": true,
+    "isolatedModules": false,
+    "noUnusedLocals": false,
+    "allowJs": true,
+    "noImplicitAny": false,
+    "pretty": false,
     "lib": ["esnext", "dom"],
     "types": ["@dcloudio/types"]
   },
