--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
     "patch-package": "^6.4.7",
+    "picocolors": "^1.0.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5",
