--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "4chao",
   "version": "1.0.0",
   "scripts": {
-    "bootstrap": "yarn install",
+    "bootstrap": "yarn install && node ./scripts/bootstrap.js",
     "dev:h5": "uni",
     "dev:mp-weixin": "uni -p mp-weixin",
     "commit": "cz",
     "prepare": "husky install",
     "preinstall": "node ./scripts/preinstall.js",
-    "postinstall": "node ./scripts/bootstrap.js"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@dcloudio/uni-app": "^3.0.0-alpha-3031020220124001",
@@ -48,7 +48,8 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5",
-    "vite": "^2.7.13"
+    "vite": "^2.7.13",
+    "vite-plugin-restart": "^0.1.1"
   },
   "config": {
     "commitizen": {
