🏢 构建: 添加vite自动引入功能,构建并挂载appUtils插件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
     "noImplicitAny": false,
     "pretty": false,
     "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types"]
+    "types": ["@dcloudio/types"],
+    "paths": {
+      "@": ["./src"],
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "exclude": ["node_modules"]
 }
