--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5",
+    "unplugin-auto-import": "^0.5.11",
     "vite": "^2.7.13",
     "vite-plugin-restart": "^0.1.1"
   },
