--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3031020220124001",
+    "is": "^3.3.0",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-class-component": "^2.3.5",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.16",
