--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3031020220124001",
     "is": "^3.3.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2",
@@ -35,6 +36,7 @@
     "@dcloudio/uni-automator": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3031020220124001",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
@@ -46,6 +48,7 @@
     "eslint-plugin-vue": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
+    "parse5": "^6.0.1",
     "patch-package": "^6.4.7",
     "picocolors": "^1.0.0",
     "prettier": "^2.5.1",
