🐛 修复(deps): 更改meta解析器为htmlparser2,解决不区分大小写问题

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.0",
+    "htmlparser2": "^7.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
-    "parse5": "^6.0.1",
     "patch-package": "^6.4.7",
     "picocolors": "^1.0.0",
     "prettier": "^2.5.1",
