--- a/src/manifest.json
+++ b/src/manifest.json
@@ -50,7 +50,7 @@
   "quickapp": {},
   /* 小程序特有相关 */
   "mp-weixin": {
-    "appid": "",
+    "appid": "wx7522558b637189e1",
     "setting": {
       "urlCheck": false
     },
