--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3031020220124001",
     "is": "^3.3.0",
     "lodash": "^4.17.21",
+    "sass": "^1.49.8",
+    "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2",
