🏢 构建(deps): 添加unocss,创建vite插件mp-attr-fix

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "yarn install && node ./scripts/bootstrap.js",
     "dev:h5": "uni",
     "dev:mp-weixin": "uni -p mp-weixin",
+    "build:h5": "uni build",
     "commit": "cz",
     "prepare": "husky install",
     "preinstall": "node ./scripts/preinstall.js",
@@ -25,6 +26,7 @@
     "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3031020220124001",
     "is": "^3.3.0",
     "lodash": "^4.17.21",
+    "logdown": "^3.3.1",
     "sass": "^1.49.8",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
@@ -38,9 +40,13 @@
     "@dcloudio/uni-automator": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3031020220124001",
     "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3031020220124001",
+    "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "@unocss/preset-attributify": "^0.26.2",
+    "@unocss/preset-icons": "^0.26.2",
+    "@unocss/preset-uno": "^0.26.2",
     "autoprefixer": "^10.4.2",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
@@ -54,11 +60,14 @@
     "normalize-path": "^3.0.0",
     "patch-package": "^6.4.7",
     "picocolors": "^1.0.0",
+    "postcss-relaxed-unit": "^1.1.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.5",
+    "unocss": "^0.26.2",
     "unplugin-auto-import": "^0.5.11",
     "vite": "^2.7.13",
+    "vite-plugin-inspect": "^0.3.15",
     "vite-plugin-restart": "^0.1.1"
   },
   "config": {
