🔩 架构(deps): 升级依赖,将unocss适配单位改为vw

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,8 @@
 {
   "type": "pwa-chrome",
   "request": "launch",
-  "skipFiles": [],
-  "name": "Debug app",
+  "name": "Launch Chrome against localhost",
   "preLaunchTask": "yarn dev:h5",
-  "url": "https://localhost:8080",
+  "url": "https://localhost:3000",
   "webRoot": "${workspaceFolder}"
 }
