--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-components": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-h5": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3031020220124001",
+    "@dcloudio/uni-app": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-components": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-h5": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3040020220301002",
     "is": "^3.3.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "logdown": "^3.3.1",
-    "sass": "^1.49.8",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -37,16 +36,16 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.16",
-    "@dcloudio/uni-automator": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3031020220124001",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3031020220124001",
+    "@dcloudio/uni-automator": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3040020220301002",
+    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3040020220301002",
     "@iconify-json/ri": "^1.1.0",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.179",
+    "@types/weixin-app": "^2.9.3",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "@unocss/preset-attributify": "^0.26.2",
     "@unocss/preset-icons": "^0.26.2",
-    "@unocss/preset-uno": "^0.26.2",
     "autoprefixer": "^10.4.2",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
@@ -63,6 +62,7 @@
     "postcss-relaxed-unit": "^1.1.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.49.9",
     "typescript": "^4.5.5",
     "unocss": "^0.26.2",
     "unplugin-auto-import": "^0.5.11",
