--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "noImplicitAny": false,
     "pretty": false,
     "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types"],
+    "types": ["@dcloudio/types", "@types/weixin-app"],
     "paths": {
       "@": ["./src"],
       "@/*": ["./src/*"]
