--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-base64": "^3.7.2",
     "lodash": "^4.17.21",
     "logdown": "^3.3.1",
+    "mescroll-uni": "^1.3.7",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
