--- a/package.json
+++ b/package.json
@@ -57,12 +57,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.0",
+    "espower-source": "^2.3.0",
     "htmlparser2": "^7.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
+    "mocha": "^9.2.2",
     "normalize-path": "^3.0.0",
     "patch-package": "^6.4.7",
     "picocolors": "^1.0.0",
+    "power-assert": "^1.6.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sass": "^1.49.9",
