--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash-es": "^4.17.21",
     "logdown": "^3.3.1",
     "mescroll-uni": "^1.3.7",
+    "nanoid": "^3.3.2",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
