✅ 测试: 添加页面深层路径支持,添加路径,元数据匹配,解析的测试用例

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3040220220310006",
     "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.179",
+    "@types/power-assert": "^1.5.8",
     "@types/weixin-app": "^2.9.3",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -54,6 +55,7 @@
     "autoprefixer": "^10.4.2",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.3.0",
+    "deep-list-dir": "^1.4.4",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
