--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-components": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-h5": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3040420220402005",
+    "@dcloudio/uni-app": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-components": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-h5": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3041020220513001",
     "dayjs": "^1.10.8",
     "is": "^3.3.0",
     "js-base64": "^3.7.2",
@@ -41,9 +41,9 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.16",
-    "@dcloudio/uni-automator": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3040420220402005",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3040420220402005",
+    "@dcloudio/uni-automator": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3041020220513001",
     "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.179",
     "@types/power-assert": "^1.5.8",
@@ -71,6 +71,7 @@
     "power-assert": "^1.6.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
     "typescript": "^4.6.3",
     "unocss": "^0.30.11",
