--- a/package.json
+++ b/package.json
@@ -14,24 +14,26 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-components": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-h5": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-components": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424004",
     "dayjs": "^1.10.8",
     "is": "^3.3.0",
     "js-base64": "^3.7.2",
     "lodash-es": "^4.17.21",
     "logdown": "^3.3.1",
     "mescroll-uni": "^1.3.7",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persist": "^1.0.0",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -41,9 +43,9 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.16",
-    "@dcloudio/uni-automator": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3041020220513001",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3041020220513001",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3040820220424004",
     "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.179",
     "@types/power-assert": "^1.5.8",
