--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424004",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424004",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-ui": "^1.4.15",
     "dayjs": "^1.10.8",
     "is": "^3.3.0",
     "js-base64": "^3.7.2",
@@ -34,6 +35,7 @@
     "mescroll-uni": "^1.3.7",
     "pinia": "^2.0.14",
     "pinia-plugin-persist": "^1.0.0",
+    "usid": "^1.0.21",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
