--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "logdown": "^3.3.1",
     "mescroll-uni": "^1.3.7",
     "pinia": "^2.0.14",
+    "pinia-class-component": "^0.9.2",
     "pinia-plugin-persist": "^1.0.0",
     "usid": "^1.0.21",
     "uview-ui": "PentaTea/uView2.0#pkg",
