--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.6.3",
     "unocss": "^0.30.11",
+    "unocss-applet": "^0.2.8",
     "unplugin-auto-import": "^0.6.6",
     "vite": "^2.7.13",
     "vite-plugin-inspect": "^0.3.15",
