--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-components": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-app": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-components": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060120220907002",
     "@dcloudio/uni-ui": "^1.4.15",
     "dayjs": "^1.10.8",
     "is": "^3.3.0",
@@ -35,8 +35,7 @@
     "mescroll-uni": "^1.3.7",
     "pinia": "^2.0.14",
     "pinia-class-component": "^0.9.2",
-    "pinia-plugin-persist": "^1.0.0",
-    "usid": "^1.0.21",
+    "pinia-plugin-persist-uni": "^1.1.5",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -46,9 +45,9 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^2.5.16",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424004",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3040820220424004",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060120220907002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060120220907002",
     "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.179",
     "@types/power-assert": "^1.5.8",
@@ -79,7 +78,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
     "typescript": "^4.6.3",
-    "unocss": "^0.30.11",
+    "unocss": "^0.45.18",
     "unocss-applet": "^0.2.8",
     "unplugin-auto-import": "^0.6.6",
     "vite": "^2.7.13",
