✅ 测试: 升级vitest, 解决一些报错问题, 添加扩展的工作区建议

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,10 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "zixuanchen.vitest-explorer",
+    "antfu.vite",
+    "antfu.unocss",
+    "vue.volar",
+    "antfu.iconify",
+    "esbenp.prettier-vscode"
+  ]
 }
