✨ 功能: 完善页面传值机制, 编写测试用例

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060120220907002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060120220907002",
     "@dcloudio/uni-ui": "^1.4.15",
+    "@iconify-json/carbon": "^1.1.11",
     "dayjs": "^1.10.8",
     "is": "^3.3.0",
     "js-base64": "^3.7.2",
@@ -36,6 +37,8 @@
     "pinia": "^2.0.14",
     "pinia-class-component": "^0.9.2",
     "pinia-plugin-persist-uni": "^1.1.5",
+    "qs": "^6.11.0",
+    "query-types": "^0.1.4",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -51,6 +54,7 @@
     "@iconify-json/ri": "^1.1.0",
     "@types/lodash": "^4.14.179",
     "@types/power-assert": "^1.5.8",
+    "@types/qs": "^6.9.7",
     "@types/weixin-app": "^2.9.3",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -81,6 +85,7 @@
     "unocss": "^0.45.18",
     "unocss-applet": "^0.2.8",
     "unplugin-auto-import": "^0.6.6",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^2.7.13",
     "vite-plugin-inspect": "^0.3.15",
     "vite-plugin-restart": "^0.1.1",
