🚧 进行中: 添加宏能力

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@dcloudio/uni-ui": "^1.4.15",
     "@iconify-json/carbon": "^1.1.11",
     "dayjs": "^1.10.8",
+    "debug": "^4.3.4",
     "is": "^3.3.0",
     "js-base64": "^3.7.2",
     "lodash-es": "^4.17.21",
@@ -52,6 +53,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060120220907002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060120220907002",
     "@iconify-json/ri": "^1.1.0",
+    "@types/debug": "^4.1.7",
     "@types/lodash": "^4.14.179",
     "@types/power-assert": "^1.5.8",
     "@types/qs": "^6.9.7",
@@ -78,6 +80,7 @@
     "picocolors": "^1.0.0",
     "power-assert": "^1.6.1",
     "prettier": "^2.5.1",
+    "read-cache": "^1.0.0",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
@@ -88,6 +91,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^2.7.13",
     "vite-plugin-inspect": "^0.3.15",
+    "vite-plugin-macro": "^0.2.0",
     "vite-plugin-restart": "^0.1.1",
     "vitest": "^0.25.3"
   },
