--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pinia-plugin-persist-uni": "^1.1.5",
     "qs": "^6.11.0",
     "query-types": "^0.1.4",
+    "uniqolor": "^1.1.0",
     "uview-ui": "PentaTea/uView2.0#pkg",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -78,6 +79,7 @@
     "picocolors": "^1.0.0",
     "power-assert": "^1.6.1",
     "prettier": "^2.5.1",
+    "read-cache": "^1.0.0",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.49.9",
@@ -88,6 +90,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^2.7.13",
     "vite-plugin-inspect": "^0.3.15",
+    "vite-plugin-macro": "^0.2.0",
     "vite-plugin-restart": "^0.1.1",
     "vitest": "^0.25.3"
   },
